--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,4 @@ language: python
 python:
   - "3.5"
 install: "pip install -r requirements.txt"
-script: "cwd"
-script: "django_ci/pytest"
+script: "pytest"
